Fixed Save Changes visibility Changed the image handling for My Account,AdPagerFragment,AdDetailFragment and Main Activity class. Pushed the images to the cloud.

--- a/app/src/main/res/layout/myaccount.xml
+++ b/app/src/main/res/layout/myaccount.xml
@@ -113,6 +113,8 @@
         android:layout_height="wrap_content"
         android:text="Save Changes"
         android:id="@+id/button_save"
+        android:visibility="invisible"
+        android:clickable="false"
         android:layout_alignParentBottom="true"
         android:background="@drawable/roundedbutton_layered"/>
 
