--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -32,6 +32,11 @@
             android:checked="false"
             android:icon="@drawable/ic_favorite_border_white_18dp"
             android:title="Favorites"/>
+        <item
+            android:id="@+id/item_notifications"
+            android:checked="false"
+            android:icon="@drawable/ic_notifications_white_18dp"
+            android:title="Notifications"/>
 
         <item
             android:id="@+id/item_login"
